--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -590,6 +590,8 @@ MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancel search for updates
 MainMenu.CheckUpdate.Dialog.message=Looking for updates. Please wait ...
 MainMenu.CheckUpdate.Dialog.title=Checking for updates
 
+GenericButton.ignore=Ignore
+
 BalanceHistory.alertTooltipAdd=First alert on {0}
 
 TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
@@ -608,7 +610,12 @@ checkbookDialog.title.new=New checkbook
 checkbookDialog.title.edit= Edit checkbook
 checkbookDialog.border.title=Checkbooks
 checkbookDialog.prefix=Prefix
-checkbookDialog.prefix.tooltip=Enter the prefix common to all checks in the check book
+checkbookDialog.prefix.tooltip=Enter the prefix common to every checks in the checkbook
+checkbookDialog.finishedcreateNew=Create a new one
+checkbookDialog.finisheddelete=Delete the checkbook
+checkbookDialog.finishedDeleteAndCreateNew=Delete it and create a new one
+checkbookDialog.finishedmessage=The checkbook ({0}->{1}) is finished, what do you want to do ?
+checkbookDialog.finishedtitle=Checkbook finished
 checkbookDialog.first=First check's number:
 checkbookDialog.first.tooltip=Enter the first check number in the checkbook
 checkbookDialog.number=Number of checks:
@@ -620,3 +627,6 @@ checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the
 checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
 checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
 checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
+
+GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
+
