--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -643,3 +643,7 @@ checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new one
 #Displayed when some periodical transactions not yet generated are detected (not yet implemented)
 GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
 
+
+#Added since 0.6.1
+MainFrame.ReadError=Yapbam is not able to read this file
+
