--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -11,7 +11,7 @@
 	<================================================================================================-->
 	<property file="customPaths.properties"/>
 	
-	<property name="yapbamVersion" value="0.6.3"/>
+	<property name="yapbamVersion" value="0.6.4"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
 	<target name="build">
@@ -60,6 +60,8 @@ Specific non windows version
 		<delete dir="${releaseDir}"/>
 	</target>
 	<target name="doc">
-		<javadoc header="${yapbamVersion}" sourcepath="src;${jcommonpath};${jfreechartpath}" packagenames="net.yapbam.data,net.yapbam.data.xml,net.yapbam.data.event,net.yapbam.date.helpers,net.yapbam.util,net.yapbam.gui,net.yapbam.gui.util,net.yapbam.gui.widget" destdir="doc" doctitle="YapBam" windowtitle="Yapbam"/>
+		<javadoc header="${yapbamVersion}" sourcepath="src;${jcommonpath};${jfreechartpath}"
+			packagenames="net.yapbam.data,net.yapbam.data.xml,net.yapbam.data.event,net.yapbam.date.helpers,net.yapbam.util,net.yapbam.gui,net.yapbam.gui.util,net.yapbam.gui.widget"
+			destdir="doc" doctitle="Yapbam" windowtitle="Yapbam"/>
 	</target>
 </project>
