Alert threshold serialization

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -647,3 +647,13 @@ GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pend
 #Added since 0.6.1
 MainFrame.ReadError=Yapbam is not able to read this file
 
+#Added since 0.6.3
+#Alert administration panel
+AccountManager.alert.greaterThan=Balance more than
+AccountManager.alert.lessThan=Balance less than
+AccountManager.alert.no=Alert is desactivated
+AccountManager.alertKind.title=Alert if
+AccountManager.alertThreshold.title=A
+AccountManager.alertKind.toolTip=Click this cell to change the alert
+AccountManager.alertThreshold.toolTip=Double-click this celle to edit the alert threshold
+
