Adds alerts for balance more than x

--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -649,11 +649,8 @@ MainFrame.ReadError=Yapbam is not able to read this file
 
 #Added since 0.6.3
 #Alert administration panel
-AccountManager.alert.greaterThan=Balance more than
-AccountManager.alert.lessThan=Balance less than
-AccountManager.alert.no=Alert is desactivated
-AccountManager.alertKind.title=Alert if
-AccountManager.alertThreshold.title=A
-AccountManager.alertKind.toolTip=Click this cell to change the alert
-AccountManager.alertThreshold.toolTip=Double-click this celle to edit the alert threshold
+AccountManager.alertThresholdLess.title=Alert if balance is less than
+AccountManager.alertThresholdMore.title=Alert if balance is more than
+AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the threshold under which an alert is raised (leave blank to set no limit)
+AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the threshold over which an alert is raised (leave blank to set no limit)
 
