--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -580,7 +580,7 @@ ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
 
-
+#---------------------------------------------------------------------------------------------------------------------------------
 #-- Added since v0.6.0
 #Added menu items
 MainMenu.web.support=Get support
@@ -644,13 +644,22 @@ checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new one
 GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
 
 
+#---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.1
 MainFrame.ReadError=Yapbam is not able to read this file
 
+#---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.3
 #Alert administration panel
 AccountManager.alertThresholdLess.title=Alert if balance is less than
 AccountManager.alertThresholdMore.title=Alert if balance is more than
 AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the threshold under which an alert is raised (leave blank to set no limit)
 AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the threshold over which an alert is raised (leave blank to set no limit)
+
+#BalanceHistory Panel
+BalanceHistory.toDay.toolTip=Sets the selected date to today
+BalanceHistory.alerts=Alerts:
+#next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
+BalanceHistory.alerts.toolTip=Select an alert in this menu to view its account balance history (this will change the current filter)
 
