--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -59,7 +59,7 @@ MainMenu.Export.ToolTip=Exports data to a text file
 MainMenuBar.Print=Print...
 MainMenuBar.Print.ToolTip=Start printing
 MainMenuBar.Print.Accelerator=P
-MainMenuBar.Print.Error.Message=<html>The following error occured during printing:<br>{0}</html>
+MainMenuBar.Print.Error.Message=<html>The following error occurred during printing:<br>{0}</html>
 MainMenuBar.Print.Error.Title=Error while printing
 
 MainMenu.Preferences=Preferences
@@ -528,11 +528,11 @@ BudgetPanel.export.toolTip=Exports this table as a text file
 BudgetPanel.filter=Filter
 BudgetPanel.filter.tooltip=Narrows the filter to current selection
 BudgetPanel.perMonth=Month-wise allocation
-BudgetPanel.perMonth.tooltip=Gets the monthly bugdet allocation
+BudgetPanel.perMonth.tooltip=Gets the monthly budget allocation
 BudgetPanel.perYear=Year-wise allocation
-BudgetPanel.perYear.tooltip=Gets the yearly bugdet allocation
+BudgetPanel.perYear.tooltip=Gets the yearly budget allocation
 
-ErrorManager.message=An error occured \!\n Current operation is aborted.
+ErrorManager.message=An error occurred \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
 
 ExportDialog.title=Export ...
@@ -584,13 +584,13 @@ ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>Th
 #-- Added since v0.6.0
 #Added menu items
 MainMenu.web.support=Get support
-MainMenu.web.support.tooltip=Opens Yapbam support web page (requires an Internet connection) to report a bug, a translation mistake, get support, ... 
+MainMenu.web.support.tooltip=Opens Yapbam support web page to report a bug or a translation mistake, get support, ... (requires an Internet connection) 
 MainMenu.web.yapbam=Visit Yapbam web site
-MainMenu.web.yapbam.tooltip=Opens Yapbam web site home page (requires an Internet connection)
+MainMenu.web.yapbam.tooltip=Opens Yapbam home page (requires an Internet connection)
 
 #Dialog displayed during online check for updates
 MainMenu.CheckUpdate.Dialog.title=Checking for updates
-MainMenu.CheckUpdate.Dialog.message=Looking for updates. Please wait ...
+MainMenu.CheckUpdate.Dialog.message=Checking for updates. Please wait...
 MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancels search for updates
 
 #A new generic button
@@ -602,17 +602,17 @@ BalanceHistory.alertTooltipAdd=First alert on {0}
 #Tooltip of transaction edition dialog that allows user to create a new checkbook
 TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
 
-#Account administration panel / account's table (payment modes and checkbooks informations)
+#Account administration panel / account's table (payment modes and checkbooks information)
 AccountManager.modesNumber.title=Number of payment modes
-AccountManager.modesNumber.toolTip=This column contains the number of payment modes attached to this account
+AccountManager.modesNumber.toolTip=Contains the number of payment modes associated with each account
 AccountManager.checkbooksNumber.title=Number of checkbooks
-AccountManager.checkbooksNumber.toolTip=This column contains the number of checkbooks attached to this account
+AccountManager.checkbooksNumber.toolTip=Contains the number of checkbooks associated with each account
 
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=Checkbooks
 checkbookDialog.Delete.tooltip=Deletes the selected checkbook
 checkbookDialog.book.short=Checkbook
-checkbookDialog.remaining.short=Number of checks remaining
+checkbookDialog.remaining.short=Number of check leaves remaining
 checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
 
@@ -620,25 +620,25 @@ checkbookDialog.New.tooltip=Creates a new checkbook
 checkbookDialog.title.new=New checkbook
 checkbookDialog.title.edit=Edit checkbook
 checkbookDialog.prefix=Prefix
-checkbookDialog.prefix.tooltip=Enter the prefix common to every checks in the checkbook
-checkbookDialog.first=First check's number:
-checkbookDialog.first.tooltip=Enter the first check number in the checkbook
+checkbookDialog.prefix.tooltip=Enter a prefix. This prefix is added to every check in the checkbook
+checkbookDialog.first=Number of the first check:
+checkbookDialog.first.tooltip=Enter the number of the first check leaf in the checkbook
 checkbookDialog.number=Number of checks:
-checkbookDialog.number.tooltip=Enter the number of checks in the checkbook
-checkbookDialog.next=Next available check's number:
+checkbookDialog.number.tooltip=Enter the number of check leaves in the checkbook
+checkbookDialog.next=Next check's number:
 checkbookDialog.next.tooltip=Enter the next available check number of the checkbook
-checkbookDialog.error.firstIsBlank=Disabled because the first check is blank
-checkbookDialog.error.numberIsBlank=Disabled because the number of checks in the checkbook is blank
+checkbookDialog.error.firstIsBlank=Disabled because the number of the first check is blank
+checkbookDialog.error.numberIsBlank=Disabled because the number of leaves in the checkbook is blank
 checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
 checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
 checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
 
 #Dialog displayed when the last check in a checkbook is used
 checkbookDialog.finished.title=Checkbook finished
-checkbookDialog.finished.message=The checkbook ({0}->{1}) is finished, what do you want to do ?
-checkbookDialog.finished.createNew=Create a new one
+checkbookDialog.finished.message=The checkbook ({0}->{1}) is finished. What do you want to do?
+checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
-checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new one
+checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
 #Displayed when some periodical transactions not yet generated are detected (not yet implemented)
 GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
@@ -653,13 +653,13 @@ MainFrame.ReadError=Yapbam is not able to read this file
 #Alert administration panel
 AccountManager.alertThresholdLess.title=Alert if balance is less than
 AccountManager.alertThresholdMore.title=Alert if balance is more than
-AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the threshold under which an alert is raised (leave blank to set no limit)
-AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the threshold over which an alert is raised (leave blank to set no limit)
+AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the lower threshold for raising an alert (leave blank to set no limit)
+AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the upper threshold for raising an alert (leave blank to set no limit)s
 
 #BalanceHistory Panel
-BalanceHistory.toDay.toolTip=Sets the selected date to today
+BalanceHistory.toDay.toolTip=Click to set the date to today
 BalanceHistory.alerts=Alerts:
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
-BalanceHistory.alerts.toolTip=Select an alert in this menu to view its account balance history (this will change the current filter)
+BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
 
