--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -640,8 +640,8 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
-#Displayed when some periodical transactions not yet generated are detected (not yet implemented)
-GeneratePeriodicalTransactionsDialog.title=Some periodical transactions are pending and may probably be generated.
+#Displayed when some periodical transactions not yet generated are detected
+GeneratePeriodicalTransactionsDialog.alert=Some periodical transactions are pending and may probably be generated.
 
 
 #---------------------------------------------------------------------------------------------------------------------------------
