--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -663,3 +663,7 @@ BalanceHistory.alerts=Alerts:
 BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
 
+#---------------------------------------------------------------------------------------------------------------------------------
+#Added since 0.6.4
+saveDialog.FileExist.message=File already exists. Would you like to overwrite it ?
+saveDialog.FileExist.title=Save Warning
