--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -578,7 +578,6 @@ ImportDialog.noAmountSelected=The amount field is not associated with any column
 ImportDialog.noDateSelected=The date field is not associated with any column of the file
 ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
-ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines were ignored.</html>
 
 #---------------------------------------------------------------------------------------------------------------------------------
 #-- Added since v0.6.0
@@ -667,3 +666,8 @@ BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of 
 #Added since 0.6.4
 saveDialog.FileExist.message=File already exists. Would you like to overwrite it ?
 saveDialog.FileExist.title=Save Warning
+
+ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines will be ignored.</html>
+ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
+ImportDialog.errorMessage.continue=Continue
+ImportDialog.errorMessage.continue.tooltip=Continues import, erroneous lines will be ignored
