--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1,5 +1,6 @@
 ApplicationName=Yet Another Personal Account Manager
 
+MainFrame.ReadError=Yapbam is not able to read this file
 MainFrame.CheckedBalance=Checked balance: {0}
 MainFrame.CurrentBalance=Current balance: {0}
 MainFrame.FinalBalance=Final balance: {0}
@@ -140,7 +141,7 @@ MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Shows information about this program (author, version ...)
 
 MainMenu.CheckUpdate=Check for updates
-MainMenu.MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
+MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
 MainMenu.CheckUpdate.Error.title=Unable to check for updates
 MainMenu.CheckUpdate.FirstRun.title=Check for update
 MainMenu.CheckUpdate.FirstRun.message=<HTML>Welcome to Yapbam \!<BR><BR>Yapbam can connect to the Internet to check whether a new version is available.<BR>Would you like Yapbam to make this check at startup?<BR><BR>This setting can be modified in the Preferences dialog (in the File menu)</html>
@@ -151,6 +152,15 @@ MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Late
 MainMenu.CheckUpdate.NoUpdate.title=No update available
 MainMenu.CheckUpdate.Success.title=An update is available
 MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
+#Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Checking for updates
+MainMenu.CheckUpdate.Dialog.message=Checking for updates. Please wait...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancels search for updates
+
+MainMenu.web.support=Get support
+MainMenu.web.support.tooltip=Opens Yapbam support web page to report a bug or a translation mistake, get support, ... (requires an Internet connection) 
+MainMenu.web.yapbam=Visit Yapbam web site
+MainMenu.web.yapbam.tooltip=Opens Yapbam home page (requires an Internet connection)
 
 BalanceHistory.title=Balance history
 BalanceHistory.toolTip=Day-to-day balance chart
@@ -159,6 +169,12 @@ BalanceHistory.chart.toolTip=Move the vertical bar down to view the balance of a
 BalanceHistory.showGrid=Show grid
 BalanceHistory.showGrid.toolTip=Check this box to see the grid
 BalanceHistory.report.toolTip=Click on the chart to change the day 
+BalanceHistory.toDay.toolTip=Click to set the date to today
+BalanceHistory.alerts=Alerts:
+BalanceHistory.alertTooltipAdd=First alert on {0}
+#next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
+BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
 
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
 AboutDialog.License.TabName=License
@@ -227,6 +243,7 @@ GeneratePeriodicalTransactionsDialog.lastDate=Generate until:
 GeneratePeriodicalTransactionsDialog.lastDate.toolTip=Enter the date until which periodical transactions should be generated
 GeneratePeriodicalTransactionsDialog.summary=Transactions: {0}, Receipts: {1}, Expenses: {2}, Total: {3}
 GeneratePeriodicalTransactionsDialog.ignored=Ignored
+GeneratePeriodicalTransactionsDialog.alert=Some periodical transactions are pending and may probably be generated.
 
 GenericButton.cancel=Cancel
 GenericButton.cancel.toolTip=Cancels the current input
@@ -240,6 +257,7 @@ GenericButton.delete=Delete
 GenericButton.duplicate=Duplicate
 GenericButton.yes=Yes
 GenericButton.no=No
+GenericButton.ignore=Ignore
 
 Transaction.0=S/T
 Transaction.account=Account
@@ -291,6 +309,8 @@ TransactionDialog.SubPanel.new=New Subtransaction
 TransactionDialog.SubPanel.new.tooltip=Creates a new subtransaction
 TransactionDialog.SubPanel.title=Subtransactions
 TransactionDialog.SubPanel.total=Subtransactions total: {0,number,currency}
+TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
+
 SubTransactionDialog.amount.tooltip=Enter the subtransaction amount
 SubTransactionDialog.empty.amount=Disabled because the amount is blank
 SubTransactionDialog.empty.desciption=Disabled because the subtransaction description is blank
@@ -376,6 +396,7 @@ PeriodicalTransactionDialog.error.dateStepper=The period for transaction generat
 PeriodicalTransactionDialog.error.nextDate=The next date is invalid
 PeriodicalTransactionDialog.generationBorderTitle=Generation
 PeriodicalTransactionDialog.transactionBorderTitle=Transaction
+
 PeriodicalTransactionManager.title=Periodical transactions management
 PeriodicalTransactionManager.toolTip=This tab allows you to manage periodical transactions
 PeriodicalTransactionManager.active.column=Active
@@ -404,6 +425,14 @@ AccountManager.transactionsNumber.toolTip=Contains the number of transactions un
 AccountManager.error.message.alreadyUsed=Account cannot be renamed; the account  "{0}" already exists 
 AccountManager.error.message.empty=Account name cannot be blank
 AccountManager.error.title=Invalid account name
+AccountManager.modesNumber.title=Number of payment modes
+AccountManager.modesNumber.toolTip=Contains the number of payment modes associated with each account
+AccountManager.checkbooksNumber.title=Number of checkbooks
+AccountManager.checkbooksNumber.toolTip=Contains the number of checkbooks associated with each account
+AccountManager.alertThresholdLess.title=Alert if balance is less than
+AccountManager.alertThresholdMore.title=Alert if balance is more than
+AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the lower threshold for raising an alert (leave blank to set no limit)
+AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the upper threshold for raising an alert (leave blank to set no limit)s
 
 CategoryManager.new.toolTip=Creates a new category
 CategoryManager.title=Category management
@@ -579,34 +608,6 @@ ImportDialog.noDateSelected=The date field is not associated with any column of 
 ImportDialog.errorMessage.title=Error during import
 ImportDialog.errorMessagelienNumberColumnHeader=Line number
 
-#---------------------------------------------------------------------------------------------------------------------------------
-#-- Added since v0.6.0
-#Added menu items
-MainMenu.web.support=Get support
-MainMenu.web.support.tooltip=Opens Yapbam support web page to report a bug or a translation mistake, get support, ... (requires an Internet connection) 
-MainMenu.web.yapbam=Visit Yapbam web site
-MainMenu.web.yapbam.tooltip=Opens Yapbam home page (requires an Internet connection)
-
-#Dialog displayed during online check for updates
-MainMenu.CheckUpdate.Dialog.title=Checking for updates
-MainMenu.CheckUpdate.Dialog.message=Checking for updates. Please wait...
-MainMenu.CheckUpdate.Dialog.cancel.tooltip=Cancels search for updates
-
-#A new generic button
-GenericButton.ignore=Ignore
-
-#Alert message when the balance history has negative value in the future
-BalanceHistory.alertTooltipAdd=First alert on {0}
-
-#Tooltip of transaction edition dialog that allows user to create a new checkbook
-TransactionDialog.checkbook.new.tooltip=Click to create a new checkbook
-
-#Account administration panel / account's table (payment modes and checkbooks information)
-AccountManager.modesNumber.title=Number of payment modes
-AccountManager.modesNumber.toolTip=Contains the number of payment modes associated with each account
-AccountManager.checkbooksNumber.title=Number of checkbooks
-AccountManager.checkbooksNumber.toolTip=Contains the number of checkbooks associated with each account
-
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=Checkbooks
 checkbookDialog.Delete.tooltip=Deletes the selected checkbook
@@ -614,7 +615,6 @@ checkbookDialog.book.short=Checkbook
 checkbookDialog.remaining.short=Number of check leaves remaining
 checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
-
 #Checkbook edition dialog
 checkbookDialog.title.new=New checkbook
 checkbookDialog.title.edit=Edit checkbook
@@ -631,7 +631,6 @@ checkbookDialog.error.numberIsBlank=Disabled because the number of leaves in the
 checkbookDialog.error.numberOutOfRange=Disabled because the number of checks you entered is too big
 checkbookDialog.error.nextIsBlank=Disabled because the next check is blank
 checkbookDialog.error.nextOutsideOfCheckbook=Disabled because the next check number is not contained in this checkbook
-
 #Dialog displayed when the last check in a checkbook is used
 checkbookDialog.finished.title=Checkbook finished
 checkbookDialog.finished.message=The checkbook ({0}->{1}) is finished. What do you want to do?
@@ -639,28 +638,6 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
-#Displayed when some periodical transactions not yet generated are detected
-GeneratePeriodicalTransactionsDialog.alert=Some periodical transactions are pending and may probably be generated.
-
-
-#---------------------------------------------------------------------------------------------------------------------------------
-#Added since 0.6.1
-MainFrame.ReadError=Yapbam is not able to read this file
-
-#---------------------------------------------------------------------------------------------------------------------------------
-#Added since 0.6.3
-#Alert administration panel
-AccountManager.alertThresholdLess.title=Alert if balance is less than
-AccountManager.alertThresholdMore.title=Alert if balance is more than
-AccountManager.alertThresholdLess.toolTip=Double-click this cell to change the lower threshold for raising an alert (leave blank to set no limit)
-AccountManager.alertThresholdMore.toolTip=Double-click this cell to change the upper threshold for raising an alert (leave blank to set no limit)s
-
-#BalanceHistory Panel
-BalanceHistory.toDay.toolTip=Click to set the date to today
-BalanceHistory.alerts=Alerts:
-#next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
-BalanceHistory.alerts.format={0}: {1,date,short} ({2})
-BalanceHistory.alerts.toolTip=Select an alert in this menu to view a history of balances of the corresponding account (changes the current filter)
 
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
