--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -648,3 +648,7 @@ ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>Th
 ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
 ImportDialog.errorMessage.continue=Continue
 ImportDialog.errorMessage.continue.tooltip=Continues import, erroneous lines will be ignored
+
+MainMenu.Protect=Protect ...
+MainMenu.Protect.Mnemonic=t
+MainMenu.Protect.ToolTip=Sets or removes the password protection
