--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -646,7 +646,7 @@ saveDialog.FileExist.title=Save Warning
 
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines will be ignored.</html>
 ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
-ImportDialog.errorMessage.continue=Continue
+GenericButton.continue=Continue
 ImportDialog.errorMessage.continue.tooltip=Continues import, erroneous lines will be ignored
 
 MainMenu.Protect=Protect ...
