--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -638,17 +638,32 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
-
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
-saveDialog.FileExist.message=File already exists. Would you like to overwrite it ?
-saveDialog.FileExist.title=Save Warning
 
+# This dialog is opened when the file where to save the data is already existing
+# Dialog title
+saveDialog.FileExist.title=Save Warning
+# Dialog message
+saveDialog.FileExist.message=File already exists. Would you like to overwrite it ?
+
+# When an imported file contains erroneous lines, a report is displayed
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines will be ignored.</html>
-ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
 GenericButton.continue=Continue
 ImportDialog.errorMessage.continue.tooltip=Continues import, erroneous lines will be ignored
+ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
 
+# Menu item to set a password to protect the data
 MainMenu.Protect=Protect ...
 MainMenu.Protect.Mnemonic=t
 MainMenu.Protect.ToolTip=Sets or removes the password protection
+
+# Dialogs dealing with setting or getting the file password
+FilePasswordDialog.title=File password protection
+FilePasswordDialog.setPassword.question=Enter the file password below
+FilePasswordDialog.setPassword.tooltip=Enter the password here or leave this field empty to grant free access to the file
+# A warning message to warn about the fact that forgot the password leads the data loosing ... for ever.
+FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you llose this password, it would be impossible to recover your data, even with the Yapbam team help.</html>
+FilePasswordDialog.openFile.question=<html>Access to that file is protected by password.<br>Enter the password below:</html>
+FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
+FilePasswordDialog.openFile.tooltip=Enter the password here.
