--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -641,29 +641,29 @@ checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 #---------------------------------------------------------------------------------------------------------------------------------
 #Added since 0.6.4
 
-# This dialog is opened when the file where to save the data is already existing
+# This dialog is opened when the file to save the data is already existing
 # Dialog title
-saveDialog.FileExist.title=Save Warning
+saveDialog.FileExist.title=Warning
 # Dialog message
-saveDialog.FileExist.message=File already exists. Would you like to overwrite it ?
+saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
 
 # When an imported file contains erroneous lines, a report is displayed
-ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The parsing of the following lines failed and these lines will be ignored.</html>
+ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
 GenericButton.continue=Continue
-ImportDialog.errorMessage.continue.tooltip=Continues import, erroneous lines will be ignored
-ImportDialog.errorMessage.cancel.tooltip=Cancels the file import
+ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors.
+ImportDialog.errorMessage.cancel.tooltip=Abandons the import
 
 # Menu item to set a password to protect the data
-MainMenu.Protect=Protect ...
+MainMenu.Protect=Password protection...
 MainMenu.Protect.Mnemonic=t
-MainMenu.Protect.ToolTip=Sets or removes the password protection
+MainMenu.Protect.ToolTip=Adds, modifies or deletes the password protection of the file
 
 # Dialogs dealing with setting or getting the file password
 FilePasswordDialog.title=File password protection
-FilePasswordDialog.setPassword.question=Enter the file password below
-FilePasswordDialog.setPassword.tooltip=Enter the password here or leave this field empty to grant free access to the file
-# A warning message to warn about the fact that forgot the password leads the data loosing ... for ever.
-FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you llose this password, it would be impossible to recover your data, even with the Yapbam team help.</html>
-FilePasswordDialog.openFile.question=<html>Access to that file is protected by password.<br>Enter the password below:</html>
+FilePasswordDialog.setPassword.question=Enter a password to restrict access to the file
+FilePasswordDialog.setPassword.tooltip=Enter a password here or leave it blank to grant free access to the file
+# A warning message to warn about the fact that forgetting the password leads to permanent data loss.
+FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you lose this password, you cannot recover your data, even with the help of the Yapbam team.</html>
+FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
 FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
 FilePasswordDialog.openFile.tooltip=Enter the password here.
