--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -650,7 +650,7 @@ saveDialog.FileExist.message=File already exists. Would you like to overwrite it
 # When an imported file contains erroneous lines, a report is displayed
 ImportDialog.errorMessagemessage=<html>Errors occurred during file import.<br>The following lines could not be parsed and will be ignored.</html>
 GenericButton.continue=Continue
-ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors.
+ImportDialog.errorMessage.continue.tooltip=Import will continue ignoring the lines having errors
 ImportDialog.errorMessage.cancel.tooltip=Abandons the import
 
 # Menu item to set a password to protect the data
@@ -667,3 +667,8 @@ FilePasswordDialog.setPassword.warning=<html><b>WARNING:</b><br>If you lose this
 FilePasswordDialog.openFile.question=<html>This file is password protected.<br>Enter the password to access it:</html>
 FilePasswordDialog.openFile.badPassword.question=<html>The password you entered is wrong.<br>Enter the password below:</html>
 FilePasswordDialog.openFile.tooltip=Enter the password here.
+
+#---------------------------------------------------------------------------------------------------------------------------------
+FilePasswordDialog.confirm=Password confirmation
+FilePasswordDialog.confirm.tooltip=Retype the password here
+FilePasswordDialog.confirmIsNotOk=Password and its confirmation are not equal
