--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -672,13 +672,13 @@ FilePasswordDialog.openFile.tooltip=Enter the password here.
 # Added or modified since last translation
 FilePasswordDialog.confirm=Password confirmation
 FilePasswordDialog.confirm.tooltip=Retype the password here
-FilePasswordDialog.confirmIsNotOk=Password and its confirmation are not equal
+FilePasswordDialog.confirmIsNotOk=Passwords do not match
 
 StatementView.title=Account statements
 StatementView.tooltip=Account statements view
-StatementView.accountMenu.tooltip=Select the account you want to view the statements.
+StatementView.accountMenu.tooltip=Select the account whose statements you want to view.
 StatementView.statementMenu.statementMenu.tooltip=Select the statement you want to display.
 StatementView.notChecked=Not checked
-StatementView.startBalance=Start of period balance: {0}
-StatementView.endBalance=End of period balance: {0}
-StatementView.statementSummary={0} transactions. Total of expenses: {1}. Total of receipts : {2}
+StatementView.startBalance=Balance at the beginning of the period: {0}
+StatementView.endBalance=Balance at the end of the period: {0}
+StatementView.statementSummary={0} transactions. Total expenses: {1}. Total receipts: {2}
